--- a/index.html
+++ b/index.html
@@ -261,6 +261,12 @@ setTimeout(() => {
 <footer style="padding: 40px 20px; width: 100%; border-top: 1px solid #333; text-align: center; color: #555; font-size: 0.8rem;">
     <p>&copy; 2026 Ecos do Tempo. Todos os direitos reservados.</p>
     <p>Desenvolvido com paixão pela história.</p>
+
+    <div style="margin-top: 20px;">
+        <a href="login.html" style="text-decoration: none; color: #333; font-size: 0.7rem; border: 1px solid #333; padding: 5px 10px; border-radius: 4px; transition: 0.3s;">
+             <i class="fas fa-lock"></i> Acesso Administrativo
+         </a>
+    </div>
 </footer>
 
 </body>
