--- a/login.html
+++ b/login.html
@@ -4,58 +4,30 @@
     <meta charset="UTF-8">
     <title>Login Administrativo | Ecos do Tempo</title>
     <style>
-        body { background: #0a0a0a; color: white; font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-        .login-card { background: #161616; padding: 40px; border-radius: 15px; border: 1px solid #d4af37; width: 300px; text-align: center; }
-        img { width: 100px; margin-bottom: 20px; }
-        input { width: 100%; padding: 12px; margin: 10px 0; background: #000; border: 1px solid #333; color: white; border-radius: 5px; box-sizing: border-box; }
-        button { width: 100%; padding: 12px; background: #d4af37; border: none; border-radius: 5px; font-weight: bold; cursor: pointer; transition: 0.3s; }
+        body { background: #0a0a0a; color: white; font-family: 'Segoe UI', sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        .login-card { background: #161616; padding: 40px; border-radius: 15px; border: 1px solid #d4af37; width: 320px; text-align: center; }
+        input { width: 100%; padding: 12px; margin: 10px 0; background: #000; border: 1px solid #333; color: white; border-radius: 8px; box-sizing: border-box; }
+        button { width: 100%; padding: 12px; background: #d4af37; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; margin-top: 10px; transition: 0.3s; }
         button:hover { background: #f1c40f; }
-        .error { color: #ff4d4d; font-size: 0.8rem; display: none; margin-top: 10px; }
-        .back-link {
-            display: block;
-            margin-top: 20px;
-            color: #555;
-            text-decoration: none;
-            font-size: 0.85rem;
-            transition: 0.3s;
-        }
-
-        .back-link:hover {
-            color: #d4af37;
-        }
-
-        .back-link i {
-            margin-right: 5px;
-        }
+        .back-link { display: block; margin-top: 20px; color: #555; text-decoration: none; font-size: 0.8rem; }
+        .back-link:hover { color: #d4af37; }
     </style>
 </head>
 <body>
     <div class="login-card">
-        <img src="logo-ecos.png" alt="Logo">
-        <h2>Painel Admin</h2>
+        <h2 style="color:#d4af37;">Ecos Admin</h2>
         <input type="text" id="user" placeholder="Usuário">
         <input type="password" id="pass" placeholder="Senha">
-        <button onclick="verificarLogin()">Entrar</button>
-        <p id="msgErro" class="error">Acesso negado. Tente novamente.</p>
-        
-        <a href="index.html" class="back-link">
-            <i class="fas fa-arrow-left"></i> Voltar ao Museu
-        </a>
+        <button onclick="verificarLogin()">ENTRAR</button>
+        <p id="msgErro" style="color:#ff4d4d; display:none; font-size:0.8rem; margin-top:10px;">Acesso negado.</p>
+        <a href="index.html" class="back-link">← Voltar ao Museu</a>
     </div>
-
     <script>
         function verificarLogin() {
-            const u = document.getElementById('user').value;
-            const p = document.getElementById('pass').value;
-
-            // Para a DEMONSTRAÇÃO de venda, usaremos um fixo. 
-            // Depois podemos integrar com Firebase para ser real.
-            if(u === "admin" && p === "ecos2024") {
+            if(document.getElementById('user').value === "admin" && document.getElementById('user').value === "admin" && document.getElementById('pass').value === "ecos2024") {
                 localStorage.setItem("logado", "true");
                 window.location.href = "admin.html";
-            } else {
-                document.getElementById('msgErro').style.display = "block";
-            }
+            } else { document.getElementById('msgErro').style.display = "block"; }
         }
     </script>
 </body>
